<resources>
    <string name="app_name">Mobile Banking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back</string>
    <string name="customer">Customer</string>
    <string name="mr_customer">Mr. Customer</string>
    <string name="view_balance">VIEW BALANCE</string>
    <string name="savings_ac">Savings A/c: XXXXXXX6789</string>
    <string name="currencies">Currencies</string>
    <string name="view_all">View All</string>
    <string name="log_in">Log in</string>
    <string name="phone_number">Phone Number</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="enter_otp">Please enter OTP</string>
    <string name="enter_valid_phone_number">Enter valid phone number</string>
    <string name="enter_phone_number">Please enter phone number</string>
    <string name="funds_transfer">Funds Transfer</string>
    <string name="transfer">Transfer</string>
    <string name="amount">Amount</string>
    <string name="transaction">Transaction</string>
    <string name="transfer_success">Transfer Success</string>
    <string name="amount_transferred_successfully">Amount transferred and credited \n to the account successfully</string>
    <string name="please_wait_page_automatically_redirected">Please wait.\nPage will be automatically\nredirected to home page..</string>
    <string name="enter_valid_amount">Please enter valid amount</string>
</resources>